issue-1804: Aligned Render opened label to checkbox

--- a/src/plugins/kibi_query_viewer_vis/public/kibi_query_viewer_vis.less
+++ b/src/plugins/kibi_query_viewer_vis/public/kibi_query_viewer_vis.less
@@ -106,3 +106,7 @@
 a.normal-font-weight.ng-scope {
   font-weight: normal;
 }
+
+input.ng-pristine.ng-untouched.ng-valid {
+    vertical-align: sub;
+}
